# autunumus

./: .gitignore  CMakeLists.txt  Image.cpp  Image.h  LICENSE  README.md  borderLineDetection.cpp  cameraCalibration.cpp  cameraCalibration.h  cameraInput.cpp  cameraInput.h  colorFiltering.cpp  coneDetection.cpp  coneDetection.h  contourHandler.cpp  contourHandler.h  fileHandler.cpp  fileHandler.h  imageProcessing.cpp  imageProcessing.h  main.cpp
calibration/: cameraCalibration.cpp  cameraCalibration.h
camera/: Camera.cpp  Camera.h  StCamera.cpp  StCamera.h  matrices.h
cone_detection/: coneDetection.cpp  coneDetection.h
frame/: Image.cpp  Image.h
improc/: .gitignore  CMakeLists.txt  Makefile  README.md  config.h  main.cpp  main.h
improc-legacy/: .gitignore  Makefile  config.h  main.cpp
improc-legacy/camera-calibration/src/: camera_calibration.cpp
improc-legacy/color-mask/src/: color_mask.cpp
improc-legacy/landmark-detection/include/: ZmqProvider.hpp  contour_processing.hpp
improc-legacy/landmark-detection/src/: detection.cpp
improc-legacy/protos/: cones.pb.h
improc-legacy/shared/include/camera/: distortion.mat
improc-legacy/shared/include/file-handler/: file_handler.hpp
improc/camera/: Camera.cpp  Camera.h  cameraCalibration.cpp  cameraCalibration.h  correction_matrices  intrinsic.mat
improc/camera-calibration/include/: camera_calibration.hpp
improc/camera-calibration/src/: camera_calibration.cpp
improc/camera/calibration/: calibrate_camera.cpp  calibrate_camera.h
improc/color-mask/include/: color_mask.hpp
improc/color_picker/: colorFiltering.cpp  color_mask.cpp  color_mask.h
improc/cone-detection/: cone.hpp  cone_detection.cpp  cone_detection.h  contour_processing.cpp  contour_processing.h
improc/cone-detection/include/: cone.hpp  cone_detection.hpp  contour_processing.hpp  zmq.hpp
improc/cone-detection/src/: cone_detection.cpp  contour_processing.cpp  zmq.cpp
improc/cone_detection/: Cone.h  cone.h  coneDetection.h  cone_detection.cpp  cone_detection.h  contour_processing.cpp  contour_processing.h
improc/cone_detection/frame/: Image.cpp  Image.h
improc/cone_detection/processing/: contour_handler.cpp  contour_handler.h  image_processing.cpp
improc/file/: file_handler.cpp  file_handler.h
improc/file_ops/: file_handler.cpp  file_handler.h
improc/frame/: Image.cpp  Image.h
improc/io/: file_handler.cpp  file_handler.h
improc/landmark-detection/include/: ZmqProvider.hpp  detection.hpp  landmark.hpp
improc/landmark-detection/src/: contour_processing.cpp
improc/path_detection/: borderLineDetection.cpp  borderLineDetection.h  roadmark_detection.cpp  roadmark_detection.h
improc/processing/: contourHandler.cpp  contourHandler.h  imageProcessing.cpp
improc/protos/: cones.pb.cc  cones.pb.h
improc/setup/: cameraCalibration.cpp  colorFiltering.h
improc/setup/camera-calibration/src/: distortion.txt  intrinsic.txt
improc/setup/color-mask/src/: main.py
improc/shared/include/camera/: Camera.hpp
improc/shared/include/image/: FrameIterator.hpp
improc/shared/src/camera/: Camera.cpp
improc/shared/src/file-handler/: file_handler.cpp
improc/shared/src/image/: FrameIterator.cpp
improc/src/: geometry.py  main.py  mask.py  polar.py  preprocessing.py  proc.py
path_detection/: borderLineDetection.cpp  borderLineDetection.h
processing/: contourHandler.cpp  contourHandler.h  imageProcessing.cpp  imageProcessing.h
ros_ws/: README.md
ros_ws/src/atom/: default.rviz
ros_ws/src/atom/control/: vel.py
ros_ws/src/atom/launch/: slam.launch  world.launch
ros_ws/src/robot/: CMakeLists.txt  default.rviz  package.xml
ros_ws/src/robot/control/: vel.py
ros_ws/src/robot/launch/: robot_description.launch  slam.launch  world.launch
ros_ws/src/robot/model/robot/: model.config  model.sdf
ros_ws/src/robot/model/robot/materials/scripts/: repeated.material
ros_ws/src/robot/script/: imgConvertor.py  runCV.py
ros_ws/src/robot/urdf/: robot.gazebo  robot.xacro
ros_ws/src/robot/worlds/: world.world
setup/: cameraCalibration.cpp  cameraCalibration.h  colorFiltering.cpp  colorFiltering.h
setup/camera-calibration/src/: main.py
shared/: setup.py
shared/protos/: cones.proto
shared/shared/: model.py  zmqprovider.py
shared/shared.egg-info/: PKG-INFO
shared/zmqprovider.egg-info/: PKG-INFO  SOURCES.txt
slam/: .gitignore  CMakeLists.txt  FastSLAM.cpp  FastSLAM.h  Makefile  Particle.cpp  Particle.h  README.md  Robot.cpp  Robot.h  config.ini  cylinder.py  cylinder_handler.cpp  cylinder_handler.h  extract_data.py  fast_slam_correction.txt  fast_slam_prediction.txt  fastslam.py  fastslam2.py  file_handler.cpp  file_handler.h  file_handler.py  landmark.py  lib.py  lidar_info  main.py  odom.txt  particle.py  particle2.py  particle_old.py  requiremenets.txt  requirements.txt  robot.py  slam.py  transformations.py  zmqprovider.py
slam/docker/: Dockerfile.input  Dockerfile.mock  Dockerfile.sink  Dockerfile.slam  run_zmq.sh
slam/docker/slam/: Dockerfile
slam/docker/source/: Dockerfile
slam/input/: sink.py  source.py
slam/input/data/: extract_data.py
slam/mock/: source.py
slam/py/: lego_robot.py
slam/results/: fast_slam_counter.txt  slam.py
slam/robot_data/: extract_data.py  fast_slam_counter.txt  motor.txt  odom.txt  odom_raw.txt  slam.txt  vel_raw.txt
slam/slam_py/: fast_slam_counter.txt  logfile_viewer.py  slam.py
slam/src/: fastslam.py  file_handler.py  landmark.py  main.py  particle.py  transformations.py  vehicle.py  zmqprovider.py
slam/src/data/: zmqprovider.py
slam/src/data/protos/: cones_pb2.py
slam/ui/: data_view.py  robot_lib.py
slam/zmq_source/: sink.py  source.py
telemetry-api/: controller.py
telemetry-api/ui/: data_view.py
vehicle/: README.md  config.ini  requirements.txt
vehicle/input/: sink.py  source.py
vehicle/input/data/: odom.txt
vehicle/src/: main.py  webcam.py  webcamprovider.py  zmqprovider.py
